--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -2,8 +2,14 @@
     <a href="#" class="logo-principal"><img src="assets/logos/logo-amado-header.png" alt="Logo do Núcleo AMADO"></a>
 
     <div class="search-container">
-        <input type="text" placeholder="Pesquisar..." class="search-bar">
-        <button class="search-btn">
+        <input type="text" placeholder="Pesquisar..." 
+                class="search-bar"
+                [(ngModel)]="searchTerm"
+                (input)="onSearchChange()"
+                (keypress)="onKeyPress($event)"
+                (focus)="onInputFocus()"
+                (blur)="onInputBlur()">
+        <button class="search-btn" (click)="onSearch()">
             <img src="assets/logos/logo-search.png" alt="Ícone de Pesquisa" class="search">
         </button>
     </div>
@@ -11,6 +17,19 @@
     <div class="navigation">
         <a href="#"><img src="assets/logos/logo-user.png" alt="Ícone de usuário" class="logo"></a>
         <div class="divider"></div>
-        <a href="#"><img src="assets/logos/logo-bag.png" alt="Ícone de carrinho" class="logo"></a>
+        <a href="#" class="position-relative" (click)="toggleCart(); $event.preventDefault()">
+            <img src="assets/logos/logo-bag.png" alt="Ícone de carrinho" class="logo">
+            <span *ngIf="totalCarrinho > 0" class="badge bg-danger position-absolute top-0 start-100 translate-middle">
+                {{ totalCarrinho }}
+            </span>
+        </a>
+
+        <div *ngIf="showCart" class="cart-panel">
+            <h5>Seu Carrinho</h5>
+            <div *ngFor="let item of itensCarrinho">
+                <div>{{ item.nome }} - {{ item.quantidade }}x</div>
+            </div>
+            <button class="btn btn-secondary" (click)="toggleCart()">Fechar</button>
+        </div>
     </div>
 </div>
